# Morpheus

./: ._sync_11c28c6f411c.db  ._sync_11c28c6f411c.db-shm  ._sync_11c28c6f411c.db-wal  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DevkitArmGBA.cmake  Doxyfile  README.md  README.rst  ndsvrambanks.txt  test8.h  test8.s  testt.s  testt2.h  testt2.s
assets/: japanese_font_test.xcf  japanese_font_test_merged.xcf  morpheuscoverimage.xcf  morpheusicon.xcf  sys8.c  sys8.h
buildtools/: Dockerfile
buildtools/bintileconvert/: bintileconvert.py  region_map.c  region_map.h
buildtools/bintilesplit/: bintilesplit.py
buildtools/cmakeliststemplate/: CMakeLists.txt
buildtools/gba_fat_patch/: gba_fat_patch.py
buildtools/generate_breathe_rst/: generate_breathe_rst.py
buildtools/generate_cd_release/: generate_cd_release.sh
buildtools/generate_fonts/: generate_fonts.py
buildtools/generate_fonts/character_lists/: en.txt  jp.txt
buildtools/project_generator/: project_generator.py
buildtools/project_generator/project_template/: CMakeLists.txt
buildtools/project_generator/project_template/assets/backgrounds/: cloud_tiles.xcf
buildtools/project_generator/project_template/src/: main.cpp
cmake/: ToolsGBA.cmake  morpheus_build_utils.cmake
core/: core.hpp  input_event.hpp  main_loop.hpp  node.hpp  uncopyable.hpp
docs/: Doxyfile  conf.py  generate_breathe_rst.py  index.rst  requirements.txt
docs/asm/: class_index.rst
docs/audio/: class_index.rst
docs/classes/: class_index.rst  class_index.rst.backup
docs/classes/core/: MainLoop.rst
docs/misc/: cmake_morpheus_build_utils_docs.rst
docs/tutorials/: getting_started.rst
games/hayai/: CMakeLists.txt
games/hayai/assets/: coin.xcf  ds_icon.xcf  enemy.xcf  enemydown.xcf  enemyleft1.xcf  tiles.xcf  tiles1d.xcf  tiles1daid.xcf
games/hayai/assets/sfx/: coin_pickup.bfxrsound  enemy_kill.bfxrsound  player_hurt.bfxrsound
games/hayai/buildtools/bintileconvert/: bintileconvert.py  hayaibuild.py
games/hayai/buildtools/bintilesplit/: bintilesplit.py
games/hayai/buildtools/hayaibuild/: hayaibuild.py
games/hayai/cmake/: morpheus_build_utils.cmake
games/hayai/src/: main.cpp
games/hayai/src/hayai/: enemy.cpp  enemy.h  enemy.hpp  level.cpp  level.hpp  player.cpp  player.hpp  player_hud.cpp  player_hud.hpp  scene.hpp
games/puzzler/: .gitignore  CMakeLists.txt
games/puzzler/assets/gimp/: circlejewel.xcf  diamondjewel.xcf  maingamescreen.xcf  squarejewel.xcf  trianglejewel.xcf
games/puzzler/assets/music/: gameover.xm  main_theme.xm  main_theme2.xm  main_theme3.xm
games/puzzler/assets/sfx/: gemcompleted.bfxrsound  gemplaced.bfxrsound
games/puzzler/buildtools/bintileconvert/: bintileconvert.py
games/puzzler/cmake/: morpheus_build_utils.cmake
games/puzzler/src/: main.cpp
games/puzzler/src/puzzler/: action_timer.hpp  jewel.cpp  jewel.hpp  main_game_scene.cpp  main_game_scene.hpp  main_menu_scene.cpp  main_menu_scene.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
gba/: gba_main_loop.cpp  gba_main_loop.hpp
gba/gfx/: sprite.cpp  sprite.hpp
include/morpheus/: utils.hpp
include/morpheus/core/: control_reciever.hpp  controllers.hpp  core.hpp  input_event.hpp  main_loop.hpp  save_manager.hpp  uncopyable.hpp
include/morpheus/gba/: gba.hpp  gba_controllers.hpp  gba_eeprom_save_manager.hpp  gba_flash_save_manager.hpp  gba_main_loop.hpp  gba_sram_save_manager.hpp  serial_communication.hpp
include/morpheus/nds/: ds_flashcard_save_manager.hpp  nds.hpp  nds_controllers.hpp  nds_main_loop.hpp
morpheus/: Makefile  utils.hpp
morpheus/core/: communication_channel.cpp  communication_channel.hpp  control_reciever.cpp  control_reciever.hpp  controllers.cpp  controllers.hpp  core.hpp  input_event.hpp  main_loop.cpp  main_loop.hpp  node.cpp  node.hpp  save_manager.cpp  save_manager.hpp  uncopyable.hpp
morpheus/core/audio/: max_mod_music.cpp  max_mod_music.hpp  max_mod_sfx.cpp  max_mod_sfx.hpp
morpheus/core/gfx/: affine_interface.hpp  animation_builder.cpp  animation_builder.hpp  animation_frame.cpp  animation_frame.hpp  animation_smoothing_attributes.cpp  animation_smoothing_attributes.hpp  font.hpp  palette_manager.cpp  palette_manager.hpp  sprite_base.cpp  sprite_base.hpp  streaming_background_base.cpp  streaming_background_base.hpp  text_base.cpp  text_base.hpp  tiled_background_base.cpp  tiled_background_base.hpp  vector_2.hpp  window.cpp  window.hpp
morpheus/gba/: gba.hpp  gba_controllers.cpp  gba_controllers.hpp  gba_eeprom_save_manager.cpp  gba_eeprom_save_manager.hpp  gba_flash_save_manager.cpp  gba_flash_save_manager.hpp  gba_main_loop.cpp  gba_main_loop.hpp  gba_sram_save_manager.cpp  gba_sram_save_manager.hpp  serial_communication.cpp  serial_communication.hpp
morpheus/gba/audio/: gba_max_mod_music.hpp  gba_max_mod_sfx.hpp
morpheus/gba/gfx/: affine_sprite_4_bpp.cpp  affine_sprite_4_bpp.hpp  affine_sprite_8_bpp.cpp  affine_sprite_8_bpp.hpp  background.cpp  background.hpp  gba_animation_builder.cpp  gba_animation_builder.hpp  gba_animation_frame.cpp  gba_animation_frame.hpp  gba_window.cpp  gba_window.hpp  sprite.cpp  sprite.hpp  sprite_4_bpp.cpp  sprite_4_bpp.hpp  sprite_8_bpp.cpp  text.cpp  (+8 more)
morpheus/nds/: ds_flashcard_save_manager.cpp  ds_flashcard_save_manager.hpp  dsi_sd_save_manager.cpp  dsi_sd_save_manager.hpp  nds.hpp  nds_controllers.cpp  nds_controllers.hpp  nds_main_loop.cpp  nds_main_loop.hpp
pcx_dir/: .h
tests/: Makefile  gba_input_test.cpp  gba_input_test.elf  gba_input_test.gba  test_image.cpp  test_image.h  testconfetti.h  testconfetti.s  testt.h  testt_image.c  testt_image.h
tests/affine_test/: affine_test.cpp
tests/animation_test/: animation_test.cpp  test_animation.hpp
tests/custom_font_test/: custom_font_test.cpp
tests/gba/: Makefile  gba_input_test.cpp
tests/gfx_effects_test/: gfx_effects_test.cpp
tests/input_test/: input_test.cpp
tests/maxmod_test/: maxmod_test.cpp
tests/nds/: nds_input_test.cpp
tests/save_test/: save_test.cpp
tests/streaming_background_test/: streaming_background_test.cpp
tests/tileset_test/: region_map.c  region_map.h  tileset_test.cpp
(+103 files in other folders)
